--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <img src="images/project1.jpg" alt="مزرعة شمسية">
                     <div class="project-info">
                         <h3>مزرعة طاقة شمسية</h3>
-                        <p>مشروع 50 ميجاواط في الصحراء</p>
+                        <p>مشروع 125 حصان في الصحراء</p>
                         <div class="project-tech">
                             <span>Helioscope</span>
                             <span>AutoCAD</span>
@@ -215,4 +215,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
