--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>البريد الإلكتروني</h3>
-                            <p>ahmed@example.com</p>
+                            <a href="mailto:wassefsobhi200@gmail.com">
+                                 <p>wassefsobhi200@gmail.com</p>
+                            </a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -217,3 +219,4 @@
 </body>
 
 </html>
+
